<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@drawable/borde"
        android:clipChildren="true"
        android:gravity="center_vertical"
        android:outlineAmbientShadowColor="@color/rojo">

        <ImageView
            android:id="@+id/id_logo"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/frida"
            android:contentDescription="@string/desc_img_msj"/>

        <TextView
            android:id="@+id/titulo"
            android:layout_width="193dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="94dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/rojo"
            android:textSize="35sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="514dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="53dp"
        android:background="#f4f6f7"
        android:clipToPadding="false"
        android:paddingTop="10dp"
        android:paddingBottom="50dp">

    </android.support.v7.widget.RecyclerView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/btnMapa"
            android:layout_width="43dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="27dp"
            android:contentDescription="@string/btnDesc"
            android:onClick="onClickMap"
            android:src="@drawable/mapa"
            android:visibility="visible"/>

        <RelativeLayout
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/addBtn"
            android:background="@drawable/back_addtask">

            <EditText
                android:id="@+id/txtMsj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="#fff"
                android:hint="@string/msj"
                android:inputType="text"
                android:minHeight="50dp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_addtask"
            >

            <ImageView
                android:id="@+id/btn_image"
                android:layout_width="43dp"
                android:layout_height="41dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/btnDesc"
                android:src="@drawable/ic_mic_white_24dp"
                android:tint="@color/rojo" />
        </RelativeLayout>



    </RelativeLayout>

</RelativeLayout>
